docs: add swagger docs to create product endpoint
